<resources>
    <string name="app_name">Note Master</string>
    <string name="Hello">Hello</string>
    <string name="welcome_back">Welcome back</string>
    <string name="email">E-mail</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="login">Login</string>
    <string name="login_anonymous">Login Anonymously</string>
    <string name="logout">Logout</string>
    <string name="user_registration_text">If you don\'t have an user account yet, </string>
    <string name="click_here">click here</string>
    <string name="notes">Notes</string>
    <string name="create_note">Create Note</string>
    <string name="title">Title</string>
    <string name="content">Content</string>
    <string name="delete_note">Delete note</string>
    <string name="get_started">Let\'s get started</string>
    <string name="create_user">Create User</string>
    <string name="registered_user_text">Are you registered? </string>
    <string name="succ_created_note">Note created successfully</string>
    <string name="fail_created_note">Failed while creating note</string>
    <string name="edit_note">Edit note</string>
    <string name="title_reqired">Title is required</string>
    <string name="succ_deleted_note">Note deleted successfully</string>
    <string name="fail_deleted_note">Failed while deleting note</string>
    <string name="succ_updated_note">Note updated successfully</string>
    <string name="fail_updated_note">Failed while updating note</string>
    <string name="verify_email_msg">Email not verified, Please verify your email</string>
    <string name="invalid_email">Email is invalid</string>
    <string name="invalid_length_password">Password length is invalid</string>
    <string name="succ_created_user">Successfully created user. Check email to verify</string>
    <string name="password_not_matched">Password not matched</string>
    <string name="wrong_user">The password is invalid or the user does not have a password</string>
    <string name="google_signin_txt">Google Sign in...</string>
    <string name="no_internet_registered">No internet connection. User registered locally</string>
    <string name="no_internet_user_exist">User already exists in the local database</string>
</resources>