<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginVertical="16dp"
    android:layout_marginHorizontal="32dp"
    tools:context=".UserLoginActivity">

    <ImageView
        android:layout_width="128dp"
        android:layout_height="128dp"
        android:layout_centerHorizontal="true"
        android:layout_marginVertical="15dp"
        android:id="@+id/login_icon"
        android:src="@drawable/login"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/login_icon"
        android:id="@+id/hello_text"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Hello"
            android:textStyle="bold"
            android:textSize="25sp"
            android:textColor="@color/black"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/welcome_back"
            android:textStyle="bold"
            android:textSize="30sp"
            android:textColor="@color/black"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/form_layout"
        android:layout_below="@id/hello_text"
        android:layout_marginVertical="15dp"
        android:orientation="vertical">
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/email_edit_text"
            android:inputType="textEmailAddress"
            android:hint="@string/email"
            android:textSize="20dp"
            android:background="@drawable/rounded_corner"
            android:padding="15dp"
            android:layout_marginTop="10dp"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/password_edit_text"
            android:inputType="textPassword"
            android:hint="@string/password"
            android:textSize="20sp"
            android:background="@drawable/rounded_corner"
            android:padding="15dp"
            android:layout_marginTop="10dp"/>


        <com.google.android.material.button.MaterialButton
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:id="@+id/login_user_btn"
            android:text="@string/login"
            android:layout_marginTop="10dp"
            android:textSize="18sp"
            />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/login_anonymous_btn"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_marginTop="10dp"
            android:backgroundTint="@color/black"
            android:text="@string/login_anonymous"
            android:textColor="@color/white"
            android:textSize="18sp" />

        <ProgressBar
            android:layout_width="24dp"
            android:layout_height="64dp"
            android:id="@+id/progress_bar"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:visibility="gone" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/form_layout"
        android:id="@+id/ask_registration_text"
        android:orientation="horizontal"
        android:gravity="center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/user_registration_text"
            android:textSize="13dp"
            tools:ignore="TextSizeCheck" />

        <TextView
            android:id="@+id/create_user_text_view_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/click_here"
            android:textSize="13dp"
            android:textStyle="bold"
            tools:ignore="TextSizeCheck" />

    </LinearLayout>
    <ImageView
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:background="@drawable/rounded_background"
        android:id="@+id/google_icon_btn"
        android:layout_below="@id/ask_registration_text"
        android:layout_centerHorizontal="true"
        android:layout_marginVertical="15dp"
        android:src="@drawable/google"
        />

</RelativeLayout>